// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> should render properly without data 1`] = `
.emotion-3 {
  width: 100%;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-3 tr {
  background-color: #252525;
}

.emotion-3 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-3 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-3 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-3 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-3 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-3 td {
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-3 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-3 td:last-of-type {
  border-right: 1px solid transparent;
}

.emotion-0 {
  text-align: left;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(2) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-2 {
  pointer-events: none;
}

.emotion-1 {
  height: 300px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: red;
  font-size: 16px;
  line-height: 20px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  background-color: #808080;
  border: none;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-5:hover {
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  color: #191919;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-6 {
  padding: 8px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b3b3b3;
  background-color: #000000;
}

.emotion-7 {
  padding: 8px 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b3b3b3;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  background-color: #808080;
  border: none;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-9:hover {
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  color: #191919;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div>
  <table
    className="emotion-3"
  >
    <thead>
      <tr>
        <th
          className="emotion-0"
        >
          ColumnOne, ColumnTwo
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        aria-label="Loading message"
        className="emotion-2"
      >
        <td
          colSpan={1}
        >
          <div
            className="emotion-1"
          >
            Loading...
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div>
     
  </div>
  <div
    className="emotion-10"
  >
    <button
      className="emotion-5"
      disabled={true}
      type="button"
    >
      <svg
        className="emotion-4"
        data-file-name="chevron.svg"
        width={16}
      />
    </button>
    <div
      className="emotion-6"
    >
      1
    </div>
    <div
      className="emotion-7"
    >
      of 
      0
    </div>
    <button
      className="emotion-9"
      disabled={true}
      type="button"
    >
      <svg
        className="emotion-8"
        data-file-name="chevron.svg"
        width={16}
      />
    </button>
  </div>
</div>
`;

exports[`<Table /> should render properly without results 1`] = `
.emotion-3 {
  width: 100%;
  border-spacing: 0;
  box-shadow: 0 0 5px 0 #000000;
  white-space: nowrap;
}

.emotion-3 tr {
  background-color: #252525;
}

.emotion-3 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-3 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-3 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-3 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-3 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-3 td {
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-3 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-3 td:last-of-type {
  border-right: 1px solid transparent;
}

.emotion-0 {
  text-align: left;
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-0:nth-of-type(2) {
  width: 100%;
}

.emotion-0:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-2 {
  pointer-events: none;
}

.emotion-1 {
  height: 300px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: red;
  font-size: 16px;
  line-height: 20px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  background-color: #808080;
  border: none;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-5:hover {
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  color: #191919;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-6 {
  padding: 8px 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b3b3b3;
  background-color: #000000;
}

.emotion-7 {
  padding: 8px 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b3b3b3;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  background-color: #808080;
  border: none;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-9:hover {
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  color: #191919;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div>
  <table
    className="emotion-3"
  >
    <thead>
      <tr>
        <th
          className="emotion-0"
        >
          ColumnOne, ColumnTwo
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        aria-label="Empty message"
        className="emotion-2"
      >
        <td
          colSpan={1}
        >
          <div
            className="emotion-1"
          >
            Empty
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <div>
     
  </div>
  <div
    className="emotion-10"
  >
    <button
      className="emotion-5"
      disabled={true}
      type="button"
    >
      <svg
        className="emotion-4"
        data-file-name="chevron.svg"
        width={16}
      />
    </button>
    <div
      className="emotion-6"
    >
      1
    </div>
    <div
      className="emotion-7"
    >
      of 
      0
    </div>
    <button
      className="emotion-9"
      disabled={true}
      type="button"
    >
      <svg
        className="emotion-8"
        data-file-name="chevron.svg"
        width={16}
      />
    </button>
  </div>
</div>
`;
